# unofficial-shipengine

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/unofficial_shipengine/: __init__.py  exceptions.py  unofficial_shipengine.py  unofficial_shipengine_config.py
src/unofficial_shipengine/batches/: models.py  services.py
src/unofficial_shipengine/carriers/: models.py  services.py
src/unofficial_shipengine/common/: models.py
src/unofficial_shipengine/core/: batches.py  carriers.py  common.py  exceptions.py  labels.py  shipment.py  shipments.py  warehouses.py
src/unofficial_shipengine/labels/: enums.py  models.py  services.py
src/unofficial_shipengine/shipments/: models.py  services.py
src/unofficial_shipengine/utils/: serialize.py
src/unofficial_shipengine/warehouses/: models.py  services.py
tests/: conftest.py  run_tests.py
tests/batches/: test_batch.py
tests/batches/vcr_cassettes/: TestBatch.test_add_to_batch_fail.yaml  TestBatch.test_add_to_batch_success.yaml  TestBatch.test_create_batch_fail.yaml  TestBatch.test_create_batch_success.yaml  TestBatch.test_delete_batch_fail.yaml  TestBatch.test_delete_batch_success.yaml  TestBatch.test_get_by_id_fail.yaml  TestBatch.test_get_by_id_success.yaml  TestBatch.test_process_labels_fail.yaml  TestBatch.test_process_labels_success.yaml  test_add_to_batch_fail  (+26 more)
tests/carriers/: test_carriers.py
tests/labels/: test_labels.py
tests/shipments/: test_shipments.py
tests/tracking/: test_tracking.py
tests/vcr_cassettes/: shipment_request.yaml
tests/warehouses/: test_warehouses.py
(+59 files in other folders)
